sparkles: feat: added schedules cards and fixed the collapsides

--- a/src/style.css
+++ b/src/style.css
@@ -171,11 +171,36 @@
     }
   }
 
+  @keyframes collapsible-down {
+    from {
+      height: 0;
+    }
+    to {
+      height: var(--radix-collapsible-content-height);
+    }
+  }
+
+  @keyframes collapsible-up {
+    from {
+      height: var(--radix-collapsible-content-height);
+    }
+    to {
+      height: 0;
+    }
+  }
+
   .animate-fade-in {
     animation: fadeIn 0.8s ease-out;
   }
 
   .animate-slide-in {
     animation: slideIn 1s ease-out forwards;
+  }
+
+  .animate-collapsible-down {
+    animation: collapsible-down 0.2s cubic-bezier(0.16, 1, 0.3, 1);
+  }
+  .animate-collapsible-up {
+    animation: collapsible-up 0.2s cubic-bezier(0.16, 1, 0.3, 1);
   }
 }
